@@ -1,3 +1,6 @@
+2011-10-05 Pierrick Caillon <pierrick@in-cite.net>
+	* API request PTReferential for StopAreaList (by code only).
+
 2011-10-04 Pierrick Caillon <pierrick@in-cite.net>
 	* Corrected time reading in CallValue.
 	* Added specific list type for Hang elements: HangList. Changed usage in EntryPoint and StopArea.
@@ -16,7 +19,7 @@
 	* Added isDebugEnabled to debug class.
 
 2011-09-15 Pierrick Caillon <pierrick@in-cite.net>
-	* Bug: Corrdinate convertion is not accurate. There is a nearly fixed noticable translation.
+	* Bug: Coordinate convertion is not accurate. There is a nearly fixed noticable translation.
 
 2011-09-02 Pierrick Caillon <pierrick@in-cite.net>
 	* Charset fix.
